--- a/android/build.gradle
+++ b/android/build.gradle
@@ -35,11 +35,18 @@ android {
     }
 }
 
+allprojects {
+    repositories {
+        maven { url 'https://maven.google.com' }
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
-    compile "com.twilio:video-android:1.0.1"
+    compile 'com.android.support:support-annotations:26.1.0'
+    compile "com.twilio:video-android:1.+"
 
     compile "com.facebook.react:react-native:+"  // From node_modules
 
