--- a/android/build.gradle
+++ b/android/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-annotations:26.1.0'
-    compile "com.twilio:video-android:1.+"
+    compile "com.twilio:video-android:1.3.11"
 
     compile "com.facebook.react:react-native:+"  // From node_modules
 
